Update element titles

--- a/src/quizCreation/templates/element_forms/text.html
+++ b/src/quizCreation/templates/element_forms/text.html
@@ -1,8 +1,8 @@
 {% if edit %}
-<h3 class="mx-3 mt-4">Edit text element</h3>
+<h3 class="mx-3 mt-4">Edit Text</h3>
 {% else %}
 <div class="modal-header">
-    <h5 class="modal-title"> Add text element</h5>
+    <h5 class="modal-title"> Add Text</h5>
     <button type="button" class="close" data-dismiss="modal"><span>×</span>
     </button>
 </div>
