--- a/src/quizCreation/templates/quiz_page_elements.html
+++ b/src/quizCreation/templates/quiz_page_elements.html
@@ -257,7 +257,7 @@
 
                                 <center>
 
-                                    <img class="mx-auto" src="{{element.element.image.url}}" alt="" style="max-height:10rem">
+                                    <img class="mx-auto" src="{{element.element.image.url}}" alt="" style="max-height:10rem;max-width:10rem;">
                                 </center>
                             </div>
 
