--- a/src/quizCreation/templates/element_forms/ImageDisplay.html
+++ b/src/quizCreation/templates/element_forms/ImageDisplay.html
@@ -19,12 +19,11 @@
 
               {% if edit %}
                   hx-post="{% url 'edit_image_element' user_quiz.id quiz_page.id element.id %}"
-                  hx-target="#editModalContent{{element.page_element.id}}"
-
+                  
                   {% else %}
                   hx-post="{% url 'add_image_display_element' user_quiz.id quiz_page.id %}"
-                  hx-target="#imageDisplayModal"
-              {% endif %}
+                  {% endif %}
+                  hx-target="#editModalContent{{element.page_element.id}}"
 
               hx-trigger="change"
               hx-swap="outerHTML"
@@ -43,7 +42,7 @@
                     <div class=" mx-auto">
                         <center>
                             <div class="userImageUpload">
-                                <img class="" src="{{element.image.url}}" alt="">
+                                <img class="my-5" src="{{element.image.url}}" alt="">
                             </div>
 
                         </center>
