--- a/src/quizCreation/templates/questions_page.html
+++ b/src/quizCreation/templates/questions_page.html
@@ -90,7 +90,7 @@
                             <div class="modal-body">
                                 {% include 'quiz_payments/payment_settings.html' %}
 
-                              
+
 
 
                             </div>
@@ -100,6 +100,9 @@
                         </div>
                     </div>
                 </div>
+
+                <a href="{% url 'add_product_quiz' user_quiz.id %}" type="button" class="btn btn-primary site-secondary-button mb-2 ml-auto text-right">Add product </a>
+
             </div>
             <div class="card-body tab-content pt-2">
                 <div class="tab-pane active show fade" id="Unifinshed">
